force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/Cloudrop__Bulk_Email_Sender__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Bulk Email Sender</label>
</CustomObject>