force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__API_Key__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__API_Key__c</fullName>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>