force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Daily_Usage_Alert_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Daily_Usage_Alert_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily Usage Alert Enabled</label>
    <type>Checkbox</type>
</CustomField>