force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Email__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>