force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Event_Notification_Settings_Created__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Event_Notification_Settings_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Notification Settings Created</label>
    <type>Checkbox</type>
</CustomField>