force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Get_Statistics_Up_to_Months__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Get_Statistics_Up_to_Months__c</fullName>
    <label>Get Statistics Up to Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>