force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Host_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Host_Name__c</fullName>
    <label>Host Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>