force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Password__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>