force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Port_Number__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Port_Number__c</fullName>
    <label>Port Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>