force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Profile_Name__c</fullName>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>