force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Sharing_Rules_Created__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Sharing_Rules_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sharing Rules Created</label>
    <type>Checkbox</type>
</CustomField>