force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Site_URL__c</fullName>
    <label>Site URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>