force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Statistics_Batch_Interval__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Statistics_Batch_Interval__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Statistics Batch Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>