force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Usage_Last_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Usage_Last_Updated_on__c</fullName>
    <label>Usage Last Updated on</label>
    <type>DateTime</type>
</CustomField>