force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Usage_Next_Reset_on__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Usage_Next_Reset_on__c</fullName>
    <label>Usage Next Reset on</label>
    <type>Date</type>
</CustomField>