force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Usage_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Usage_Remaining__c</fullName>
    <label>Usage Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>