force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__Usage_Reset_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Usage_Reset_Frequency__c</fullName>
    <label>Usage Reset Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>