force-app/main/default/objects/Cloudrop__Bulk_Email_Sender__c/fields/Cloudrop__User_name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__User_name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>User name</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>